--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,8 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png">
  
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" >
+    <script src="https://kit.fontawesome.com/2e96785465.js" crossorigin="anonymous"></script>
+    
   
   <!-- <link href="https://fonts.googleapis.com/css?family=Lobster&display=swap" rel="stylesheet"> -->
   <link href="https://fonts.googleapis.com/css?family=Poppins:600&display=swap" rel="stylesheet">
